@@ -6,6 +6,7 @@ and Unix-like operating systems:
 
 	Linux
 	OpenBSD
+	NetBSD
 
 If your operating system is not listed and you get it to work, please
 drop me a line at matt@lickey.com.  I am very interested to hear about
