@@ -1,1 +1,3 @@
-Uhh, I haven't updated this properly...sorry!
+Thanks to the following people for bug fixes and/or suggestions:
+
+Shawn Dvorak <shawndvorak@worldnet.att.net>
