@@ -93,7 +93,7 @@
 .nr % 0
 .rr F
 .\}
-.TH FLIPIT 1 "flipit version 0.1.5" "22/Aug/1999" "flipit 0.1.5"
+.TH FLIPIT 1 "flipit version 0.2.0" "27/May/2000" "flipit 0.2.0"
 .UC
 .if n .hy 0
 .if n .na
@@ -195,7 +195,7 @@ flipit \- control the X10 Firecracker (CM17A)
 \& flipit [-h] [-t tty] [COMMAND ARGS] [COMMAND ARGS]...
 .Ve
 .SH "DESCRIPTION"
-This document describes flipit version 0.1.5.
+This document describes flipit version 0.2.0.
 .PP
 Flipit allows you to control X10 devices with your Unix computer by
 means of a Firecracker (model number CM17A) plugged into a serial
@@ -284,7 +284,8 @@ least be an option to do this for those using the cm17a on the same serial
 port as their modem or similar.
 .PP
 There are reports of the brighten command always taking the lamp to the full
-brightness.  I haven't been able to reproduce that here.  Any suggestions or
+brightness.  I haven't been able to reproduce that here.  Some have suggested
+to me that this happens only with older lamp controllers.  Any suggestions or
 fixes are appreciated.
 .SH "RESTRICTIONS"
 Flipit does no security checking itself.  If it finds that it can open
