@@ -42,7 +42,7 @@ flipit - control the X10 Firecracker (CM17A)
 <HR>
 <H1><A NAME="DESCRIPTION">DESCRIPTION</A></H1>
 <P>
-This document describes flipit version 0.1.5.
+This document describes flipit version 0.2.0.
 
 <P>
 Flipit allows you to control X10 devices with your Unix computer by means
@@ -184,7 +184,8 @@ serial port as their modem or similar.
 
 <P>
 There are reports of the brighten command always taking the lamp to the
-full brightness. I haven't been able to reproduce that here. Any
+full brightness. I haven't been able to reproduce that here. Some have
+suggested to me that this happens only with older lamp controllers. Any
 suggestions or fixes are appreciated.
 
 <P>
