@@ -1,3 +1,7 @@
+User visible changes for flipit version 0.2.0, May 27, 2000:
+
+	None, doc fixes only.  Code is identical to 0.1.5.
+
 User visible changes for flipit version 0.1.5, August 22, 1999:
 
 	Improved the man page and documented /dev/cuaX in the
